@@ -1,8 +1,7 @@
 package test;
 
 import java.io.IOException;
-
-import jdk.incubator.foreign.MemorySegment;
+import java.lang.foreign.MemorySegment;
 
 public abstract class BaseReader {
 
@@ -10,16 +9,16 @@ public abstract class BaseReader {
 	public static final long ABSENT = 1L << 33;
 	public static final long ABSENT_OR_NO_VALUE = NO_VALUE | ABSENT;
 
-	public void run(JMHState state) {
+	final void run() throws IOException {
+		var state = new JMHState();
+		state.setup();
+
 		for (var i = 0; i < 10; i++) {
 			seek(state.trie, state.keys, (int) state.keys.byteSize(), state.countTime);
 		}
 	}
 
-	final void run() throws IOException {
-		var state = new JMHState();
-		state.setup();
-
+	public void run(JMHState state) {
 		for (var i = 0; i < 10; i++) {
 			seek(state.trie, state.keys, (int) state.keys.byteSize(), state.countTime);
 		}
