@@ -1,9 +1,10 @@
 package test;
 
-import static jdk.incubator.foreign.ValueLayout.JAVA_BYTE;
-import static jdk.incubator.foreign.ValueLayout.JAVA_INT;
+import static java.lang.foreign.ValueLayout.JAVA_BYTE;
+import static test.UnalignedMemoryAccess.getIntAtOffset;
 
 import java.io.IOException;
+import java.lang.foreign.MemorySegment;
 import java.time.LocalDateTime;
 import java.util.concurrent.TimeUnit;
 
@@ -14,60 +15,20 @@ import org.openjdk.jmh.annotations.OperationsPerInvocation;
 import org.openjdk.jmh.annotations.OutputTimeUnit;
 import org.openjdk.jmh.infra.Blackhole;
 
-import jdk.incubator.foreign.MemorySegment;
+import static test.JMHState.*;
 
 public class Reader extends BaseReader {
 
-	@Override
-	void seek(MemorySegment trie, MemorySegment keys, int len, long ct) {
-		var start = 0;
-		var lines = 0;
-		var now = System.nanoTime();
-		var keyAddr = keys.address().toRawLongValue();
-
-		for (var i = 0; i < len; i++) {
-			if (JMHState.U.getByte(keyAddr + i) == '\n') {
-				var q = lookup(trie, keys, start, i);
-
-				if ((q & ABSENT_OR_NO_VALUE) == 0) {
-					lines++;
-				}
-				start = i + 1;
-			}
-		}
-		var dq = (double) (System.nanoTime() - now);
-
-		var ovh = 0L;
-
-		System.out.printf("[%s](read) lines: %d. query time: %.2f. dq-ct: %.2f. ns/q: %.2f. ns/q(-ct): %.2f ns/q(-ovh): %.2f ns/q(-ovh -ct): %.2f\n", LocalDateTime.now(), lines, dq, dq - ct, dq / lines, (dq - ct) / lines, (dq - ovh) / lines, (dq - ovh - ct) / lines);
+	static int base(MemorySegment ms, long offset) {
+		return getIntAtOffset(ms, offset << 3);
 	}
 
-	public static void main(String[] args) throws IOException {
-		JMHState.VERBOSE = true;
-		new Reader().run();
-	}
-
-	static long u64(int n) {
-		// this is the right conversion, however the code itself it not ready to deal with negative
-		// values, so keep the upcast as a signed promotion.
-		// return n & 0XFFFFFFFFL;
-		return n;
-	}
-
-	static int u32(byte v) {
-		return v & 0xFF;
+	static int check(MemorySegment ms, long offset) {
+		return getIntAtOffset(ms, 4 + (offset << 3));
 	}
 
 	static int i32(long v) {
 		return (int) v;
-	}
-
-	static int base(MemorySegment ms, long offset) {
-		return ms.get(JAVA_INT, offset << 3);
-	}
-
-	static int check(MemorySegment ms, long offset) {
-		return ms.get(JAVA_INT, 4 + (offset << 3));
 	}
 
 	static long lookup(MemorySegment array, MemorySegment data, int pos, int end) {
@@ -92,6 +53,22 @@ public class Reader extends BaseReader {
 		}
 	}
 
+	public static void main(String[] args) throws IOException {
+		JMHState.VERBOSE = true;
+		new Reader().run();
+	}
+
+	static int u32(byte v) {
+		return v & 0xFF;
+	}
+
+	static long u64(int n) {
+		// this is the right conversion, however the code itself it not ready to deal with negative
+		// values, so keep the upcast as a signed promotion.
+		// return n & 0XFFFFFFFFL;
+		return n;
+	}
+
 	@Benchmark
 	@OutputTimeUnit(TimeUnit.NANOSECONDS)
 	@OperationsPerInvocation(10_000_000)
@@ -104,7 +81,7 @@ public class Reader extends BaseReader {
 		var keyAddr = keys.address().toRawLongValue();
 		var len = (int) keys.byteSize();
 		for (var i = 0; i < len; i++) {
-			if (JMHState.U.getByte(keyAddr + i) == '\n') {
+			if (U.getByte(keyAddr + i) == '\n') {
 				var q = lookup(trie, keys, start, i);
 				bh.consume(q);
 				if ((q & ABSENT_OR_NO_VALUE) == 0) {
@@ -113,5 +90,29 @@ public class Reader extends BaseReader {
 				start = i + 1;
 			}
 		}
+	}
+
+	@Override
+	void seek(MemorySegment trie, MemorySegment keys, int len, long ct) {
+		var start = 0;
+		var lines = 0;
+		var now = System.nanoTime();
+		var keyAddr = keys.address().toRawLongValue();
+
+		for (var i = 0; i < len; i++) {
+			if (U.getByte(keyAddr + i) == '\n') {
+				var q = lookup(trie, keys, start, i);
+
+				if ((q & ABSENT_OR_NO_VALUE) == 0) {
+					lines++;
+				}
+				start = i + 1;
+			}
+		}
+		var dq = (double) (System.nanoTime() - now);
+
+		var ovh = 0L;
+
+		System.out.printf("[%s](read) lines: %d. query time: %.2f. dq-ct: %.2f. ns/q: %.2f. ns/q(-ct): %.2f ns/q(-ovh): %.2f ns/q(-ovh -ct): %.2f\n", LocalDateTime.now(), lines, dq, dq - ct, dq / lines, (dq - ct) / lines, (dq - ovh) / lines, (dq - ovh - ct) / lines);
 	}
 }
